gitops/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  tls:
    - hosts:
        - nginx.local
      secretName: nginx.tls

  rules:
    - host: nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
